adding css and id for js.html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Pixels to Aspect ratio</title>
 </head>
 <body>
+    <h1>PIXELS TO ASCPECT RATIO CALCULATOR</h1>
+        <div class="box">
+            <p id="resA"></p>
+            <p id="resB"></p>
+            <p id="result"></p>
+        </div>
     <script src="script.js"></script>
 </body>
 </html>
